--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="/images/window.png" alt="a bright yellow window on a blue wall">
                 <p class="first-p">At vero eos et <a href="#">accusam et justo duo</a> dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus et malesuada fames ac. <a href="#">Sed cras ornare</a> arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
-                <p><a href="#">Read more...<a></p>
+                <p class='last-el'><a href="#">Read more...<a></p>
             </div>
             
         </main>
